--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>過癮菜行</title>
+    <title>過癮菜行廠商點單</title>
   </head>
   <body>
     <div id="app"></div>
